# chess-rs

.github/workflows/: mayhem.yml  sync.yml
chrs-lib/fuzz/: Cargo.toml
chrs-lib/fuzz/fuzz_targets/: chrs-lib-fuzz.rs
mayhem/: Dockerfile  Mayhemfile  build.sh
mayhem/fuzz/: Cargo.toml
