[package]
name = "chrs-lib-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }

[dependencies.chrs-lib]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "chrs-lib-fuzz"
path = "fuzz_targets/chrs-lib-fuzz.rs"
test = false
doc = false
